[project]
dependencies = [
    "numpy >= 1.21.0",
    "opencv-python >= 4.2.0.32"
]
[build-system]
requires = [
    "setuptools >= 48",
    "setuptools_scm >= 6.2",
    "wheel >= 0.29.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "release-branch-semver"
write_to = "src/cho_util/_version.py"
