# NOTE(ycho): Uncomment when bumping to python >= 3.8
#[project]
#dependencies = [
#    "numpy >= 1.21.0",
#    "opencv-python >= 4.2.0.32"
#]

[build-system]
requires = [
    "setuptools >= 48",
    "setuptools_scm >= 6.2",
    "setuptools_scm_git_semver",
    "wheel >= 0.29.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "guess-next-rc"
local_scheme = "time-dot-node"
normalize = false
write_to = "src/cho_util/_version.py"
