[metadata]
name = cho-util
author = Yoonyoung (Jamie) Cho
author_email = jchocholate@gmail.com
description = Collection of python utilities for a roboticist
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yycho0108/cho-util
keywords = robotics
license = MIT
classifiers = 
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
package_dir =
    = src
packages = find:
python_requires = >=3.6
setup_requires =
    setuptools_scm >= 6.0
install_requires =
    numpy >= 1.19.0
    opencv_python >= 4.2.0.32
    dataclasses;python_version<'3.7'
    simple_parsing

[options.packages.find]
where = src
